<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/enter_team_1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/enter_name_of_team_1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/enter_team_2_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/team_1_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/enter_team_2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/enter_name_of_team_2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/choose_team_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/team_2_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_team_1_name" />

    <Button
        android:id="@+id/choose_team_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/choose_who_goes_first"
        app:layout_constraintBottom_toTopOf="@+id/show_team_chosen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_team_2_name" />

    <TextView
        android:id="@+id/show_team_chosen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_team_button" />

    <TextView
        android:id="@+id/team_1_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_1"
        app:layout_constraintBaseline_toBaselineOf="@+id/enter_team_1_name"
        app:layout_constraintEnd_toStartOf="@+id/enter_team_1_name"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/team_2_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_2"
        app:layout_constraintBaseline_toBaselineOf="@+id/enter_team_2_name"
        app:layout_constraintEnd_toStartOf="@+id/enter_team_2_name"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>